force-app/main/default/objects/Clarification__c/Clarification__c.object-meta.xml
<CustomObject>
    <label>Clarification</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Clarification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clarifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>