force-app/main/default/objects/Clarification__c/fields/ApprovalAlert__c.field-meta.xml
<CustomField>
    <fullName>ApprovalAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ApprovalAlert</label>
    <type>Checkbox</type>
</CustomField>