force-app/main/default/objects/Clarification__c/fields/ClosedOutStatus__c.field-meta.xml
<CustomField>
    <fullName>ClosedOutStatus__c</fullName>
    <formula>Text(NAM__r.ClosedOutStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Out Status</label>
    <type>Text</type>
</CustomField>