force-app/main/default/objects/Clarification__c/fields/FinalComment__c.field-meta.xml
<CustomField>
    <fullName>FinalComment__c</fullName>
    <label>Final Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>