force-app/main/default/objects/Clarification__c/fields/NAM__c.field-meta.xml
<CustomField>
    <fullName>NAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NAM</label>
    <referenceTo>NAM__c</referenceTo>
    <relationshipLabel>Clarifications</relationshipLabel>
    <relationshipName>Clarifications</relationshipName>
    <type>Lookup</type>
</CustomField>