force-app/main/default/objects/Clarification__c/fields/NAMStatus__c.field-meta.xml
<CustomField>
    <fullName>NAMStatus__c</fullName>
    <formula>TEXT(NAM__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAM Status</label>
    <type>Text</type>
</CustomField>