force-app/main/default/objects/Clarification__c/fields/NAMSubject__c.field-meta.xml
<CustomField>
    <fullName>NAMSubject__c</fullName>
    <formula>NAM__r.Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAM Subject</label>
    <type>Text</type>
</CustomField>