force-app/main/default/objects/Clarification__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mitsui</fullName>
            </value>
            <value>
                <fullName>Marubeni</fullName>
            </value>
            <value>
                <fullName>MOL</fullName>
            </value>
            <value>
                <fullName>MINC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>