force-app/main/default/objects/Clarification__c/fields/RejectReason__c.field-meta.xml
<CustomField>
    <fullName>RejectReason__c</fullName>
    <label>Reject Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>