force-app/main/default/objects/Clarification__c/fields/SendPEMEmail__c.field-meta.xml
<CustomField>
    <fullName>SendPEMEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send PEM Email</label>
    <type>Checkbox</type>
</CustomField>