force-app/main/default/objects/Clarification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAM</fullName>
            </value>
            <value>
                <fullName>Closed Out</fullName>
            </value>
            <value>
                <fullName>MINC</fullName>
                <isActive>false</isActive>
                <label>MINC</label>
            </value>
            <value>
                <fullName>MOL</fullName>
                <isActive>false</isActive>
                <label>MOL</label>
            </value>
            <value>
                <fullName>Marubeni</fullName>
                <isActive>false</isActive>
                <label>Marubeni</label>
            </value>
            <value>
                <fullName>Mitsui</fullName>
                <isActive>false</isActive>
                <label>Mitsui</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>