force-app/main/default/objects/Clarification__c/fields/Vessel__c.field-meta.xml
<CustomField>
    <fullName>Vessel__c</fullName>
    <formula>NAM__r.Vessel__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vessel</label>
    <type>Text</type>
</CustomField>