force-app/main/default/objects/Clarification__c/validationRules/finnalComment.validationRule-meta.xml
<ValidationRule>
    <fullName>finnalComment</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Text(Status__c) = &apos;Approved&apos;,  ISBLANK(FinalComment__c ))</errorConditionFormula>
    <errorDisplayField>FinalComment__c</errorDisplayField>
    <errorMessage>You must inform the Final Comment to Approve the NAM record</errorMessage>
</ValidationRule>