force-app/main/default/objects/Clarification__c/validationRules/rejectionDenied.validationRule-meta.xml
<ValidationRule>
    <fullName>rejectionDenied</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Text(Status__c) = &apos;Rejected&apos; ,   NAMStatus__c &lt;&gt; &apos;SPC Partners&apos;)</errorConditionFormula>
    <errorMessage>You only can edit the clarification when NAM record status is &apos;SPC Partners&apos;</errorMessage>
</ValidationRule>