force-app/main/default/objects/Clarification__c/validationRules/rejectReason.validationRule-meta.xml
<ValidationRule>
    <fullName>rejectReason</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Text(Status__c) = &apos;Reject&apos;,  ISBLANK(RejectReason__c ))</errorConditionFormula>
    <errorDisplayField>RejectReason__c</errorDisplayField>
    <errorMessage>You must inform the Reject Reason to Reject the NAM</errorMessage>
</ValidationRule>