force-app/main/default/objects/Clarification__c/validationRules/statusApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>statusApproved</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Text(Status__c) &lt;&gt; &apos;Approved&apos;,  NOT(ISBLANK(FinalComment__c )))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You must select Status to Approved before fill a Final Comment</errorMessage>
</ValidationRule>