force-app/main/default/objects/Clarification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vessel__c</columns>
    <columns>NAM__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>FinalComment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>