force-app/main/default/objects/Clarification__c/listViews/Marubeni_Clarification.listView-meta.xml
<ListView>
    <fullName>Marubeni_Clarification</fullName>
    <filterScope>Queue</filterScope>
    <label>Marubeni</label>
    <queue>Marubeni</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>