force-app/main/default/objects/Clarification__c/listViews/Mitsui_Clarification.listView-meta.xml
<ListView>
    <fullName>Mitsui_Clarification</fullName>
    <filterScope>Queue</filterScope>
    <label>Mitsui</label>
    <queue>Mitsui</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>