force-app/main/default/objects/Clarification__c/listViews/MOL_Clarification.listView-meta.xml
<ListView>
    <fullName>MOL_Clarification</fullName>
    <filterScope>Queue</filterScope>
    <label>MOL</label>
    <queue>MOL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>