force-app/main/default/objects/Clarification__c/listViews/PendingClarification.listView-meta.xml
<ListView>
    <fullName>PendingClarification</fullName>
    <columns>NAME</columns>
    <columns>Vessel__c</columns>
    <columns>NAM__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>FinalComment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Approved,Rejected</value>
    </filters>
    <label>Pending Clarification</label>
</ListView>