force-app/main/default/objects/Clarification__c/listViews/RejectClarification.listView-meta.xml
<ListView>
    <fullName>RejectClarification</fullName>
    <columns>NAME</columns>
    <columns>Vessel__c</columns>
    <columns>NAM__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>FinalComment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Clarification</label>
</ListView>